--- a/AndroidSpringboot/app/src/main/res/values/strings.xml
+++ b/AndroidSpringboot/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AndroidSpringboot</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_delete">Delete</string>
+    <string name="title_activity_update">Update</string>
 </resources>
